--- a/templates/courses.html
+++ b/templates/courses.html
@@ -6,7 +6,7 @@
 <div class="card">
     <h2 style="text-align: center; margin-bottom:20px;">Available Courses</h2>
 
-    <div class="table-container">
+    <div class="courses-table-container">
         <table class="courses-table">
             <thead>
                 <tr>
