--- a/templates/students.html
+++ b/templates/students.html
@@ -6,7 +6,7 @@
 <div class="card" style="width:800px; ">
     <h2 style="text-align:center; margin-bottom:20px;">Registered Students</h2>
 
-    <div class="table-container">
+    <div class="students-table-container">
         <table class="students-table">
             <thead>
                 <tr>
